2000-10-21  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in: Added pl to ALL_LINGUAS.

2000-10-21  Zbigniew Chyla  <cyba@gnome.pl>

	* sodipodi/src/toolbox.c (sp_maintoolbox_create):
	Marked strings for translation.

2000-10-18  Christophe Merlet  <christophe@merlet.net>

	* configure.in: Oups, forgotten to add French (fr) to $ALL_LINGUAS

2000-10-18  Christophe Merlet  <christophe@merlet.net>

	* sodipodi.desktop: Added French string.

2000-10-17  Lauris Kaplinski  <lauris@helixcode.com>

	* src/nodepath.c (sp_nodepath_node_destroy): fixed YANC (Yet
	Another Nodepath Crash)
	
2000-10-16  Frank Felfe  <innerspace@iname.com>

	* glade/toolbox.glade: Updated zoom toolbox

	* src/desktop-events.*: Added sp_canvas_root_handler

	* src/desktop.c: Added statusbar, clean up zooming

	* src/sp-metrics.* (sp_metric_to_metric_string): A way to
	suppress metric identifier in strings

	* src/sp-ruler.c: Copy GtkRuler object

	* src/zoom-context.c: Use desktop region markup with border

	* src/bonobo/embeddable-desktop.c: Ditto
	
2000-10-13  Lauris Kaplinski  <lauris@helixcode.com>

	* src/text-context.c (sp_text_context_item_handler): Return
	if repr == NULL; Commit changes to undo stack.

2000-10-11  Lauris Kaplinski  <lauris@helixcode.com>

	* src/draw-context.c (sp_draw_context-destroy): Detach signal

2000-10-11  Frederic Devernay <Frederic.Devernay@sophia.inria.fr>

	* Makefile.am: Use test -r for compatibility

	* src/Makefile.am: Remove -export-dynamic

	* src/main.c: Use libxml 1.8.8/2.0

	* src/interface.c: Make fake_dialogs nonstatic

	* src/xml/repr-io.c: Use libxml 1.8.8/2.0

2000-10-09  Lauris Kaplinski  <lauris@helixcode.com>

	* configure.in: Version 0.20

	* src/helper/unit-menu.*: New convenience object

	* src/desktop.c (sp_desktop_destroy): Destroy first eventcontext,
	then selection

	* src/draw-context.c: Make silent

	* src/file.c (sp_file_import_ok): Use "xlink:href" for images

	* src/sp-image.c (sp_image_read_attr): Use "xlink:href"